elk/logstash.yml
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: kube-system
spec:
  ports:
  - port: 1514
    targetPort: 1514
    name: logstash
  - port: 514
    targetPort: 514
    name: logstash2
  selector:
    type: logstash
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: kube-system
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      type: logstash
  template:
    metadata:
      labels:
        type: logstash
        srv: srv-logstash
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
      - image: docker.io/kubeimages/logstash:7.9.3
        name: logstash
        ports:
        - containerPort: 1514
          name: logstash
        - containerPort: 514
          name: logstash2
        command:
        - logstash
        - '-f'
        - '/etc/logstash_config/logstash.conf'
        volumeMounts:
        - name: config-volume
          mountPath: /etc/logstash_config/
        - name: config-yml-volume
          mountPath: /usr/share/logstash/config/
        - name: timezone
          mountPath: /etc/localtime
        resources: 
          limits:
            cpu: 1000m 
            memory: 1024Mi
          requests:
            cpu: 200m
            memory: 512Mi
      volumes:
      - name: config-volume
        configMap:
          name: logstash-conf
          items:
          - key: logstash.conf
            path: logstash.conf
      - name: timezone
        hostPath:
          path: /etc/localtime
      - name: config-yml-volume
        configMap:
          name: logstash-yml
          items:
          - key: logstash.yml
            path: logstash.yml
