elk/ing-kibana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-kibana
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
